carousel - add relative positioning to items to fix issue with non-active zoom images overlapping

--- a/assets/stylesheets/soysauce/_carousel.scss
+++ b/assets/stylesheets/soysauce/_carousel.scss
@@ -14,6 +14,7 @@
     margin: 0 auto;
   }
   [data-ss-component="item"] {
+    position: relative;
     list-style-type: none;
     float: left;
     &[data-ss-state="active"], &[data-ss-state="zooming"], &[data-ss-state="zoomed"] {
